<resources>
    <string name="app_name">Event Details</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Events">Events</string>
    <string name="myEvents">My Events</string>
    <string name="Achievements">Achievements</string>
    <string name="profile">Profile</string>
    <string name="event_title">Extra Life Charity Helper</string>
    <string name="slot">"Slot : "</string>
    <string name="Share">Share</string>
    <string name="QRText">Generate QR Code</string>
    <string name="Complete">Complete</string>
    <string name="Register">Register Now</string>
    <string name="title_hint">Input Event Title</string>
    <string name="Save">Save</string>
    <string name="tagline">Extending a helping hand to whomever and whoever, wherever there is a need for such.</string>
    <string name="volunteerText">Browse and sign up for activities you are interested in.</string>
    <string name="organizerText">Get help on tasks from your trusted community.</string>
    <string name="volunteerTitle">Be a volunteer</string>
    <string name="organizerTitle">Organize an event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enterUsername">Enter Username</string>
    <string name="forgotPW"><u><i>Forgot password?</i></u></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="mainFBtext">or login with</string>
    <string name="facebook">Facebook</string>
    <string name="findAccount">Find your account</string>
    <string name="emailText">Enter your email address linked to your account.</string>
    <string name="hintEmail">Email address</string>
    <string name="sendEmail">Send email</string>
    <string name="continueFacebook">Continue with Facebook</string>
    <string name="or">Or</string>
    <string name="registerEmail">Register with Google</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="enterCode">Enter confirmation code</string>
    <string name="codeText">Enter the confirmation code that we sent to your email. Resend code.</string>
    <string name="confirmationCode">Confirmation code</string>
    <string name="next">next</string>
    <string name="setProfile">Set up profile</string>
    <string name="addPhoto">Add profile photo</string>
    <string name="addPhotoDesc">Add a profile photo so that your friends can know it\'s you.</string>
    <string name="addPhoto2">Add a photo</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="contact">Contact Number</string>
    <string name="email">Email address</string>
    <string name="editProfile">Edit Profile</string>
    <string name="signout">Sign out</string>
    <string name="done">Done</string>
    <string name="signoutQ">Sign out from Selfless?</string>
    <string name="cancel">Cancel</string>
</resources>