<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.eventdetails.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.eventdetails.ui.Events.EventsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_myevents"
        android:name="com.example.eventdetails.ui.MyEvents.MyEventsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_myevents" />

    <fragment
        android:id="@+id/navigation_achievements"
        android:name="com.example.eventdetails.ui.Achievement.achievementFragment"
        android:label="@string/Achievements"
        tools:layout="@layout/achievement_fragment" />
</navigation>